1.7.1 Released ?? September 2008
	- Bug with wrong normales at boundary points in Surf3*() is corrected.

1.7 Released 1 June 2008
	- MGL parser is sufficiently rewritten:
		* User now can define its own MGL command (by changing mglParse::Cmd).
		* Export MGL script to C++ file for the most of commands (except 'list', 'delete', 'call', 'for|next') is possible.
		* New tool 'mgl2cpp' is added for exporting MGL script to C++ file.
		* Uniform interface for tools: mgl2png, mgl2eps, mgl2svg, mglview.
		* New command: 'define $N sth'.
		* New conditional commands: 'if|else|elseif|endif'.
		* New for-cycle commands: 'for|next'. Format is: 'for $N var' or 'for $N x1 x2 [dx]'.
		* Command [xyz]tick now has additional argument for the start position of ticks.
		* A set of MGL commands is extended by adding the new ones: 'mirror', 'face[xyz]', 'perspective', 'fit', 'fits', 'normsl', 'momentum', 'putsfit', 'rearrange', 'arrowsize', '[xyz]label', 'ctick'.
		* Unicode support in scripts.
		* Commands 'cont3' and 'contf3' now have variants for manual setting of contour level values.
	- New class mglGraphIDTF is added for exporting graphics in IDTF format (which can be converted later to U3D pictures for inserting in PDF)
	- New function mglGraph::Fit[23S]() is added for nonlinear fitting of data arrays.
	- New function mglGraph::PutsFit() is added for printing the fitted formula.
	- Color specification in color scheme (not in line style!) now supports "brighted" colors like "b1b2b3...b9". At this, color "b5" is equal to "b". Also, function mglColor::Set now has additional argument for "brightness" of the color.
	- Color scheme now may contain up to 32 colors.
	- New variable mglGraph::OrgT is added for manual setting of tick position (if OrgT.[xyz]!=NAN).
	- Improved algorithm for automatic axis positioning (if Org.[xyz]==NAN).
	- Function SubPlot() and MGL command 'subplot' now have arguments for additional relative plot shifting.