@@ -4,8 +4,10 @@
 2. Update documentation + add example of Fit()
 3. Ternary axis -- keep z-axis as normal one ???
 4. MGL commands 'fplot', 'fsurf' -- curve|surface specified by formula.
-5. Org = NAN by default
+5. MGL command 'ftext x y {z} 'fname' {i} ['stl' size]' for printing text from file.
 6. Change ticks drawing if RotatedText = false;
+7. Bug with mgl_example (installed ???)
+8. Check WriteBMP
 
 13. Add FLTK & GLUT to Fortran ??? How pass arguments ???
 14. Converter MGL->C (+ interface for MGL->Fortran by change HMDT->int, HMGL->int, "->');
